<package>
  <name>obstacle_measurement</name>
  <version>0.1.0</version>
  <description>
     obstacle measurement
  </description>
  <maintainer email="12345678@qq.com">Roman Fedorenko</maintainer>
/maintainer>
  <license>BSD</license>

  <author>Bob ma</author>
  <url>http://baidu.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
   <run_depend>image_transport</run_depend>

</package>
